--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-junit</artifactId>
             <version>${cucumber.jvm.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -61,6 +62,7 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>1.9.5</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
