--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 project.ext {
     springVersion = "4.0.2.RELEASE"
     cucumberJvmVersion = "1.1.7"
-    tomcatVersion = '7.0.42'
     junitVersion = '4.11'
     hamcrestVersion = '1.3'
+    cargoVersion = '1.4.5'
+    handleId = 'tomcat7'
 }
 
 apply plugin: "java"
-apply plugin: "war"
 sourceCompatibility = 1.7
 group = "com.test"
 version = "1.0"
@@ -28,13 +28,14 @@ configurations {
             }
         }
     }
-    embeddedTomcat {
+
+    cargoDeps {
         dependencies {
-            embeddedTomcat "org.apache.tomcat.embed:tomcat-embed-core:$project.tomcatVersion"
-            embeddedTomcat "org.apache.tomcat.embed:tomcat-embed-logging-juli:$project.tomcatVersion"
-            embeddedTomcat "org.apache.tomcat.embed:tomcat-embed-jasper:$project.tomcatVersion"
+            cargoDeps "org.codehaus.cargo:cargo-core-uberjar:$project.cargoVersion"
+            cargoDeps "org.codehaus.cargo:cargo-ant:$project.cargoVersion"
         }
     }
+
     testing {
         dependencies {
             testing "com.jayway.restassured:rest-assured:2.3.1"
@@ -45,6 +46,8 @@ configurations {
         }
     }
 }
+
+apply plugin: "war"
 
 apply plugin: "idea"
 
@@ -81,20 +84,12 @@ buildscript {
     }
 
     dependencies {
-        classpath 'org.gradle.api.plugins:gradle-tomcat-plugin:1.2.4'
+        classpath 'org.gradle.api.plugins:gradle-cargo-plugin:1.5'
     }
 }
 
-apply plugin: 'tomcat'
-apply plugin: 'tomcat-base'
-
-[tomcatRun, tomcatRunWar]*.httpPort = 8181
-[tomcatRun, tomcatStop]*.stopPort = 8182
-[tomcatRun, tomcatStop]*.stopKey = 'stopKey'
-[tomcatRunWar]*.warDirectory = "$buildDir/libs/spring-no-xml-1.0.war"
-[tomcatRun, tomcatRunWar]*.contextPath = "/"
-[tomcatRun]*.outputFile = file("$buildDir/tomcat-output")
-//[tomcatRun]*.daemon = true
+apply plugin: 'cargo'
+apply plugin: 'cargo-base'
 
 dependencies {
     compile "org.springframework:spring-webmvc:$project.springVersion"
@@ -104,7 +99,25 @@ dependencies {
     testCompile configurations.cucumber
     testCompile configurations.testing
 
-    tomcat configurations.embeddedTomcat
+    cargo configurations.cargoDeps
+}
+
+cargo {
+    containerId = 'tomcat7x'
+    port = 8181
+
+    deployable {
+        context = '/'
+    }
+
+    local {
+
+        installer {
+            installUrl = 'http://apache.osuosl.org/tomcat/tomcat-7/v7.0.54/bin/apache-tomcat-7.0.54.zip'
+            downloadDir = file("$buildDir/download")
+            extractDir = file("$buildDir/extract")
+        }
+    }
 }
 
 task wrapper(type: Wrapper) {
@@ -119,7 +132,7 @@ test {
 }
 
 task acceptanceTestsLocal(type: Test) {
-    dependsOn assemble, tomcatRun, compileTestJava
+    dependsOn assemble, cargoStartLocal, compileTestJava
 
     include "com/test/cukes/**"
 //    doLast {
@@ -134,10 +147,10 @@ task acceptanceTestsLocal(type: Test) {
 //        }
 //    }
 
-    finalizedBy tomcatStop
+    finalizedBy cargoStopLocal
 }
 
-task integrationTest(type: Test) {
+task integrationTests(type: Test) {
     include "**/*IT.*"
     exclude "com/test/cukes/**"
 }
